[GUI] Backport Bitcoin Qt/Gui changes up to 0.14.x (Part II)
Shortened version of commit https://github.com/dashpay/dash/commit/9707ca5ceabe46c8d9bba7fd2adb6f1c4328baae#diff-2537e9bcbac21d35d8fa28ce1a35e89d

--- a/src/qt/forms/optionsdialog.ui
+++ b/src/qt/forms/optionsdialog.ui
@@ -6843,6 +6843,16 @@ QTabBar { alignment: left; }</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_Window">
        <item>
+        <widget class="QCheckBox" name="hideTrayIcon">
+         <property name="toolTip">
+          <string>&amp;Hide the icon from the system tray.</string>
+         </property>
+         <property name="text">
+          <string>Hide tray icon</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="minimizeToTray">
          <property name="palette">
           <palette>
