--- a/src/qt/forms/modaloverlay.ui
+++ b/src/qt/forms/modaloverlay.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>404</height>
+    <height>385</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -50,12 +50,9 @@
       <item>
        <widget class="QWidget" name="contentWidget" native="true">
         <property name="styleSheet">
-         <string notr="true">#contentWidget { background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255); border-radius: 6px; }
+         <string notr="true">#contentWidget { background: rgba(255,255,255,240); border-radius: 6px; }
 
-QLabel { color: rgb(255,255,255);  }
-
-</string>
+QLabel { color: rgb(40,40,40);  }</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayoutSub" stretch="1,0,0,0">
          <property name="spacing">
@@ -93,8 +90,8 @@ QLabel { color: rgb(255,255,255);  }
                </property>
                <property name="icon">
                 <iconset>
-                 <normaloff>:/icons/drk/warning</normaloff>
-                 <disabledoff>:/icons/drk/warning</disabledoff>:/icons/drk/warning</iconset>
+                 <normaloff>:/icons/warning</normaloff>
+                 <disabledoff>:/icons/warning</disabledoff>:/icons/warning</iconset>
                </property>
                <property name="iconSize">
                 <size>
@@ -132,12 +129,8 @@ QLabel { color: rgb(255,255,255);  }
              </property>
              <item>
               <widget class="QLabel" name="infoText">
-               <property name="styleSheet">
-                <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
-               </property>
                <property name="text">
-                <string>The displayed information may be out of date. Your wallet automatically synchronizes with the Dynamic network after a connection is established, but this process has not completed yet. This means that recent transactions will not be visible, and the balance will not be up-to-date until this process has completed.</string>
+                <string>Recent transactions may not yet be visible, and therefore your wallet's balance might be incorrect. This information will be correct once your wallet has finished synchronizing with the Dash network, as detailed below.</string>
                </property>
                <property name="textFormat">
                 <enum>Qt::RichText</enum>
@@ -155,12 +148,8 @@ color: rgb(255, 255, 255);</string>
                  <bold>true</bold>
                 </font>
                </property>
-               <property name="styleSheet">
-                <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
-               </property>
                <property name="text">
-                <string>Spending DYN may not be possible during that phase!</string>
+                <string>Attempting to spend Dash that are affected by not-yet-displayed transactions will not be accepted by the network.</string>
                </property>
                <property name="textFormat">
                 <enum>Qt::RichText</enum>
@@ -222,23 +211,15 @@ color: rgb(255, 255, 255);</string>
                <bold>true</bold>
               </font>
              </property>
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
-             </property>
              <property name="text">
-              <string>Amount of blocks left</string>
+              <string>Number of blocks left</string>
              </property>
             </widget>
            </item>
            <item row="0" column="1">
             <widget class="QLabel" name="numberOfBlocksLeft">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
-             </property>
              <property name="text">
-              <string>Unknown...</string>
+              <string>unknown...</string>
              </property>
             </widget>
            </item>
@@ -249,10 +230,6 @@ color: rgb(255, 255, 255);</string>
                <weight>75</weight>
                <bold>true</bold>
               </font>
-             </property>
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
              </property>
              <property name="text">
               <string>Last block time</string>
@@ -267,12 +244,8 @@ color: rgb(255, 255, 255);</string>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
-             </property>
              <property name="text">
-              <string>Unknown...</string>
+              <string>unknown...</string>
              </property>
             </widget>
            </item>
@@ -284,10 +257,6 @@ color: rgb(255, 255, 255);</string>
                <bold>true</bold>
               </font>
              </property>
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
-             </property>
              <property name="text">
               <string>Progress</string>
              </property>
@@ -297,10 +266,6 @@ color: rgb(255, 255, 255);</string>
             <layout class="QHBoxLayout" name="horizontalLayoutSync" stretch="0,1">
              <item>
               <widget class="QLabel" name="percentageProgress">
-               <property name="styleSheet">
-                <string notr="true">color: rgb(255, 255, 255);
-background-color: rgb(0, 0, 0);</string>
-               </property>
                <property name="text">
                 <string>~</string>
                </property>
@@ -310,9 +275,6 @@ background-color: rgb(0, 0, 0);</string>
               <widget class="QProgressBar" name="progressBar">
                <property name="value">
                 <number>24</number>
-               </property>
-               <property name="format">
-                <string/>
                </property>
               </widget>
              </item>
@@ -326,21 +288,13 @@ background-color: rgb(0, 0, 0);</string>
                <bold>true</bold>
               </font>
              </property>
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
-             </property>
              <property name="text">
-              <string>Progress increase per Hour</string>
+              <string>Progress increase per hour</string>
              </property>
             </widget>
            </item>
            <item row="4" column="1">
             <widget class="QLabel" name="progressIncreasePerH">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
-             </property>
              <property name="text">
               <string>calculating...</string>
              </property>
@@ -354,10 +308,6 @@ color: rgb(255, 255, 255);</string>
                <bold>true</bold>
               </font>
              </property>
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
-             </property>
              <property name="text">
               <string>Estimated time left until synced</string>
              </property>
@@ -365,10 +315,6 @@ color: rgb(255, 255, 255);</string>
            </item>
            <item row="5" column="1">
             <widget class="QLabel" name="expectedTimeLeft">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
-             </property>
              <property name="text">
               <string>calculating...</string>
              </property>
